# vector-renderer-wasm

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  flake.nix  index.html
src/: lib.rs
wasm/: vector-renderer.js
