[package]
name = "vector-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.14.0"
bevy_egui = { version = "0.28.0", default-features = false, features = [
  "render",
  "default_fonts",
] }
bevy_mod_picking = { version = "0.20.1", features = ["bevy_egui"] }
bevy_panorbit_camera = { version = "0.19.0", features = ["bevy_egui"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ["--cfg=web_sys_unstable_apis"]
