[package]
name = "vector-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "webgl2",
] }
bevy_egui = { version = "0.28.0", default-features = false, features = [
  "render",
  "default_fonts",
] }
bevy_mod_picking = { version = "0.20.1", features = ["bevy_egui"] }
bevy_panorbit_camera = { version = "0.19.0", features = ["bevy_egui"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
uuid = { version = "1.17.0", features = ["js", "v4"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ["--cfg=web_sys_unstable_apis"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
